# local-coding-agent

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_變更紀錄.md  CONTRIBUTING.md  CONTRIBUTING_開發指南.md  README.md  project_tree.md  project_tree.py  py_file_lines.md  pyproject.toml  requirements.txt  目錄結構.md
.tmp.driveupload/: 10441  10445  10447  10451  10453  10455  10459  10461  10463  10467  10469  10473  10477  10481  10485  10489  10493  10495  10499  10503  10505  10509  10511  10513  10517  10521  10525  10529  10533  10537  10541  10545  10547  10549  10553  10555  10559  10561  10565  10569  (+172 more)
continue/: config.template.yaml  config.yaml
docs/: 00_文件導航.md  01_架構總覽與導讀.md  01_目標與方向.md  02_產品定位與設計原則.md  02_設計方案.md  03_pipeline架構.md  03_執行架構與技術主線.md  04_ExecutionController說明.md  04_開發流程_協作與進度.md  05_安裝流程說明.md  05_工作流程與Continue.md  06_合作與貢獻.md  07_CONTRIBUTING.md  08_CHANGELOG.md  09_變更與進度.md  10_AGENT_PROGRESS.md  11_TRACE_SUMMARY_PROGRESS.md  CHANGELOG_變更紀錄.md  CONTRIBUTING_開發指南.md  DEVELOPMENT_STATUS.md  ExecutionController_v1_實作說明.md  architecture.md  collaboration_protocol.md  continue-setup.md  cursor_style_notes.md  local_coding_agent_master_plan.md  pipeline_architecture.md  tool-contracts.md  validation-policy.md  workflow.md  合作與貢獻指南.md  工作流程與Continue設定.md  文件導航與閱讀順序.md  目標與方向.md  設計方案.md  變更與進度.md
local_coding_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
repo_guardian_agent/: __init__.py  patch_generator.py  planner.py  validation_controller.py
repo_guardian_mcp/: __init__.py  agent_loop.py  cli.py  cli_chat_service.py  (+5 more)
(+166 files in other folders)
