[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-coding-agent"
version = "0.1.0"
description = "Scaffold for a local coding agent / repo guardian MCP"
authors = [{ name = "You" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
]

[tool.setuptools]
packages = ["repo_guardian_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
repo-guardian = "repo_guardian_mcp.cli:main"
